Fix header alignment on Firefox

--- a/static/styles/components/header.scss
+++ b/static/styles/components/header.scss
@@ -14,6 +14,7 @@
 
     .pure-menu-heading {
         text-transform: none;
+        float: left;
     }
 
     li .pure-menu-link {
